[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/popups/MenuPopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/popups/leave_popup.gd" type="Script" id=2]
[ext_resource path="res://res/fade_in/FadeIn.tscn" type="PackedScene" id=3]

[node name="LeavePopup" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="FadeIn" parent="." index="3" instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
